# dbus-explorer

./: .gitignore  COPYING  DBus-Explorer.mds  DBus-Explorer.sln  DBusViewerSharp.mds  Makefile.am  Makefile.include  Packages.mdse  autogen.sh  configure.ac
DBusViewerSharp/: AssemblyInfo.cs  Common.cs  CustomBusDialog.cs  DBusExplorator.cs  DBusMonitor.cs  DBusViewerSharp.mdp  ImageAnimation.cs  LanguageRepresentationSelector.cs  Logging.cs  Main.cs  MainWindow.cs  Makefile.am  app.desktop  dbus-explorer.in
DBusViewerSharp/Base/: Main.cs
DBusViewerSharp/Caller/: BaseCaller.cs  InvocationData.cs  MethodCaller.cs  PropertyCaller.cs  ReflectionVisitor.cs
DBusViewerSharp/Config/: ILangDefinition.cs  LangDefinitionPool.cs  Parser.cs
DBusViewerSharp/Generator/: CSharpCodeDomGenerator.cs  CodeDomGenerator.cs  IGenerator.cs
DBusViewerSharp/InvocationLayer/: InvocationData.cs  MethodInvokator.cs
DBusViewerSharp/LangSupport/: ILangDefinition.cs  LangDefinition.cs  LangDefinitionPool.cs  LangDefinitionService.cs  LangParser.cs
DBusViewerSharp/LangSupport/Formats/: EventFormat.cs  MethodFormat.cs  PropertyFormat.cs
DBusViewerSharp/Parser/: IParserVisitor.cs  Mapper.cs  Parser.cs  ParserNg.cs
DBusViewerSharp/Parser/TextVisitors/: CSharpVisitor.cs  LangDefVisitor.cs
DBusViewerSharp/Representation/: ArgEntry.cs  Argument.cs  Element.cs  ElementFactory.cs  ElementRepresentation.cs  ElementsEntry.cs  Enums.cs  IElement.cs  IEntry.cs  Interface.cs  MethodEntry.cs  PathContainer.cs  PropertyEntry.cs  SignalEntry.cs
DBusViewerSharp/SSP/: Parser.cs  SExp.cs  Types.cs
DBusViewerSharp/Widgets/: BusContentView.cs  BusPageWidget.cs  GenerationDialog.cs  GenerationMenuWidget.cs  ImageAnimation.cs  InformationView.cs  InvokeDialog.cs  LangageRepresentationViewer.cs  LanguageWidget.cs  MethodInvokeDialog.cs  PreferencesPanel.cs  PropertyInvokeDialog.cs  TabWidget.cs
DBusViewerSharp/gtk-gui/: DBusExplorer.BusPageWidget.cs  DBusExplorer.CustomBusDialog.cs  DBusExplorer.DBusMonitor.cs  DBusExplorer.GenerationDialog.cs  DBusExplorer.InformationView.cs  DBusExplorer.InvokeDialog.cs  DBusExplorer.LanguageWidget.cs  DBusExplorer.MainWindow.cs  DBusExplorer.MethodInvokeDialog.cs  DBusExplorer.PropertyInvokeDialog.cs  MainWindow.cs  gui.goodsave.stetic  gui.stetic  objects.xml
DBusViewerSharpTranslation/: DBusViewerSharpTranslation.mdse  Makefile.am  fr.po  messages.po
Packaging/: Packaging.mdse
data/formatters/: csharp.lang.xml  csharp.scm
src/: DBus-Explorer.csproj  Makefile.am  app.desktop  dbus-explorer
src/Base/: DBusExplorator.cs  Logging.cs  Main.cs  MainWindow.cs
src/Caller/: BaseCaller.cs  InvocationData.cs  Json.cs  JsonChecker.cs  MethodCaller.cs  PropertyCaller.cs
src/Generator/: CSharpCodeDomGenerator.cs  IGenerator.cs
src/LangSupport/: LangDefinitionService.cs  LangParser.cs
src/Parser/: IParserVisitor.cs  Mapper.cs
src/Parser/TextVisitors/: LangDefVisitor.cs
src/Representation/: Element.cs  ElementFactory.cs  Enums.cs  IElement.cs
src/Widgets/: BusContentView.cs  GenerationDialog.cs  GenerationMenuWidget.cs  InformationView.cs  LanguageWidget.cs  MethodInvokeDialog.cs  PropertyInvokeDialog.cs
src/data/formatters/: csharp.lang.xml
src/gtk-gui/: DBusExplorer.CustomBusDialog.cs  DBusExplorer.GenerationDialog.cs  DBusExplorer.InformationView.cs  DBusExplorer.MainWindow.cs  DBusExplorer.MethodInvokeDialog.cs  DBusExplorer.PropertyInvokeDialog.cs  gui.stetic
